--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
              </ul>
 
 
-             <img src="./images/cristal.png" alt="">
+             <img src="cristal.png" alt="">
 
          </div>
     </section>
         
     <section>
         <div class="div2">
-            <img src="./images/glass_img.png" alt="">
+            <img src="glass_img.png" alt="">
             <h1>About Me</h1>
 
             <p>Duo invidunt diam lorem accusam ea et rebum. Elitr dolor sed sed no et kasd kasd dolor. Et duo takimata consetetur duo gubergren no. Est.
@@ -50,7 +50,7 @@
         <div class="div3">
             
             <div class="card-1">
-                <img src="./images/icon1.png" alt="">
+                <img src="icon1.png" alt="">
                 <h1>UI design</h1>
                 <p>The disporting alas one a the along and on. And flaunting to was his,
                    wight none disappointed childe he superstition..</p>
@@ -58,7 +58,7 @@
             </div>
 
             <div class="card-2">
-                <img src="./images/icon2.png" alt="">
+                <img src="icon2.png" alt="">
                 <h1>Web Development</h1>
                 <p>Alla quella come nostro e verso né maravigliose forse.
                    Avvien grazia merito alla niuno da primo essaudisce,
@@ -68,7 +68,7 @@
             </div>
 
             <div class="card-3">
-                <img src="./images/icon3.png" alt="">
+                <img src="icon3.png" alt="">
                 <h1>App Development</h1>
                 <p>De ou jusqu'aux pieds elle toujours pleure-t-elle m'enivre.
                    Est de a de langoureux au fatuité tes, quel est contemplons cette volupté mal n'est divinement de exquise.
